tests/chapter_15/invalid_types/function_returns_array.c
// this is a parse error in our implementation
// but could also be a type error
int(foo(void))[3][4];